--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://www.paypal.com/sdk/js?client-id=uf43q94076532"></script>
   </body>
 </html>
