--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>React App</title>
+    <scrip
+      src="https://www.paypal.com/sdk/js?client-id=ASssUHUVy9fvZ7hTznDL8eLVim2p8X2hJL5N6EsZtvO_HWiQjxLYdPCZ4l2z1RRH2hw9VPJGqd3Ke2vv"
+    ></scrip>
   </head>
   <body>
     <div id="root"></div>
-    <script src="https://www.paypal.com/sdk/js?client-id=uf43q94076532"></script>
   </body>
 </html>
