--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,15 @@
     <scrip
       src="https://www.paypal.com/sdk/js?client-id=ASssUHUVy9fvZ7hTznDL8eLVim2p8X2hJL5N6EsZtvO_HWiQjxLYdPCZ4l2z1RRH2hw9VPJGqd3Ke2vv"
     ></scrip>
+    <!-- <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"
+    ></script> -->
+    <!-- <script type="text/javascript">
+      (function () {
+        emailjs.init(user_UAEwjN4ZyTWrzLOmb2INF);
+      })();
+    </script> -->
   </head>
   <body>
     <div id="root"></div>
